# sokoban

./: .clang-format  .gitignore  CMakeLists.txt  data.qrc  levels.txt  readme.md
cmake/: flags.cmake  util.cmake  werror.cmake
data/: readme.md
levels/: DrFogh-Original01.txt  Thinking_Rabbit_extra.txt  levels.txt  readme.md
src/: CMakeLists.txt  main.cpp
src/interface/: elements.cpp  elements.h  main_window.cpp  main_window.h  scene.cpp  scene.h  scene_label.cpp  scene_label.h  solver_wrapper.cpp  solver_wrapper.h  util.cpp  util.h
src/soko/: cell.h  cross.h  game_state.cpp  game_state.h  heuristic.cpp  heuristic.h  hungarian_algo.cpp  hungarian_algo.h  map.cpp  map.h  mat.hpp  move.h  pos.h  solvability.cpp  solvability.h  solver.cpp  solver.h  util.cpp  util.h
src/util/: circular_buffer.hpp
test/: CMakeLists.txt
test/soko/: test_heuristic.cpp  test_hungarian_algo.cpp  test_solver.cpp  test_util.cpp
